# realtime-avatar-ai

./: .gitignore  Makefile  README.md  docker-compose.yml
asr_service/: log.txt  requirements.txt
asr_service/app/: audio_utils.py  main_grpc.py
asr_service/protos/: asr_pb2.py  asr_pb2_grpc.py
asr_service/tests/: test_whisper_runner.py
avatar_renderer/: package-lock.json  package.json
avatar_renderer/public/: index.html  style.css
avatar_renderer/src/: viseme_mapper.ts
avatar_sync/: Makefile
avatar_sync/proto/: avatar.proto
avatar_sync/src/: avatar_sync_service.cpp  main.cpp  websocket_dispatcher.h
avatar_sync/tests/: avatar_sync_service_test.cpp
backend/: Makefile  docker-compose.yml
backend/asr_service/: Makefile
backend/asr_service/app/: whisper_runner.py
backend/asr_service/protos/: asr.proto
backend/asr_service/tests/: test_audio_utils.py  test_grpc_asr.py
backend/avatar_sync/: dockerfile
backend/avatar_sync/src/: avatar_sync_service.h  websocket_dispatcher_uwebs.cpp  websocket_dispatcher_uwebs.h
backend/avatar_sync_service/: CMakeLists.txt  Dockerfile  Makefile
backend/avatar_sync_service/protos/: avatar_sync.proto
backend/avatar_sync_service/src/: avatar_sync_service.cpp  avatar_sync_service.h  main.cpp  webrtc_handler.cpp  webrtc_handler.h
backend/llm_engine/: CMakeLists.txt  Dockerfile  Dockerfile.external_test  Dockerfile.test  Dockerfile.unit_test  Makefile  docker-compose.yml  log.txt  requirements.txt
backend/llm_engine/protos/: llm.proto  tts.proto
backend/llm_engine/src/: llm_server.py  llm_service.cpp  llm_service.h  main.cpp  openai_client.cpp  openai_client.h  tts_client.cpp  tts_client.h
backend/llm_engine/tests/: external_integration_test.py  internal_unit_tests.cpp  mock_tts_server.py  requirements.txt  test_llm_engine.py
backend/protos/: llm.proto  tts.proto
backend/stt_service/: CMakeLists.txt  CMakeLists.txt.test  Dockerfile  Dockerfile.external_test  Dockerfile.test  Dockerfile.unit_test  Makefile  docker-compose.yml
backend/stt_service/proto/: llm_engine.proto  stt.proto
backend/stt_service/protos/: llm.proto
backend/stt_service/src/: azure_stt_client.cpp  azure_stt_client.h  llm_engine_client.cpp  llm_engine_client.h  main.cpp  stt_service.cpp  stt_service.h
backend/stt_service/tests/: external_integration_test.py  internal_unit_tests.cpp  mock_llm_server.py
backend/tts_service/: CMakeLists.txt  Dockerfile  Dockerfile.external_test  Dockerfile.test  Dockerfile.unit_test  Makefile  docker-compose.yml
backend/tts_service/proto/: tts.proto
backend/tts_service/protos/: avatar_sync.proto  tts.proto
backend/tts_service/src/: avatar_sync_client.cpp  avatar_sync_client.h  azure_tts_client.cpp  azure_tts_client.h  azure_tts_engine.cpp  azure_tts_engine.h  main.cpp  tts_service.cpp  tts_service.h
backend/tts_service/test_results/: report.xml
backend/tts_service/tests/: external_integration_test.py  internal_unit_tests.cpp  mock_avatar_sync_server.py  requirement.txt  test_tts_service.cpp
backend/webrtc_gateway/: CMakeLists.txt  Dockerfile  Makefile  config.yml
backend/webrtc_gateway/protos/: stt.proto
backend/webrtc_gateway/src/: main.cpp
backend/webrtc_gateway/src/grpc_clients/: SttClient.h  TtsClient.cpp  TtsClient.h
backend/webrtc_gateway/src/rtc/: PeerConnectionManager.cpp  PeerConnectionManager.h
backend/webrtc_gateway/src/signaling/: SignalingProtocol.h  WebSocketServer.cpp  WebSocketServer.h  WebSocketSession.cpp
backend/websocket_gateway/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.unit_test  Makefile
backend/websocket_gateway/protos/: avatar_sync.proto  stt.proto
backend/websocket_gateway/src/: avatar_sync_service_impl.cpp  avatar_sync_service_impl.h  main.cpp  stt_client.cpp  stt_client.h  types.h  websocket_server.cpp  websocket_server.h
backend/websocket_gateway/tests/: internal_unit_tests.cpp
frontend/: Dockerfile  Makefile  babel.config.js  dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/__mocks__/: babylonjs.js  fileMock.js  identity-obj-proxy.js  onnxruntime-web.js
frontend/public/: index.html
frontend/src/: avatar_controller.ts  main.ts  websocket_client.ts
frontend/src/css/: style.css
frontend/src/js/: audio-worklet-processor.js  audio.js  avatar.js  main.js  sileroVadRunner.js  vad.js  webrtc.js  websocket.js
llm_engine/: .gitignore  Dockerfile  Makefile  requirements-dev.txt  requirements.txt
llm_engine/app/: llm_client.py  llm_client_llama.py  main.py  modes.py  post_processor.py  prompt_builder.py  session_manager.py
llm_engine/tests/: test_llm_client_llama.py  test_llm_clinet.py  test_post_processor.py  test_prompt_builder.py  test_session_manager.py
modules/vad/: Makefile
modules/vad/src/: main.cpp  vad_processor.cpp  websocket_client.cpp  websocket_client.h
tts_service/: CMakeLists.txt  Dockerfile  requirements-dev.txt
tts_service/proto/: tts.proto
tts_service/python/: tts_wrapper.py
tts_service/scripts/: setup_cmake.sh
tts_service/src/: azure_tts_client.cpp  main.cpp  tts_engine.cpp  tts_engine.h  tts_service.cpp  tts_service.h
tts_service/tests/: test_grpc_tts.cpp  test_tts_engine.cpp  test_tts_service.cpp
vad_service/src/: vad_processor.h
